# pdldb

./: .gitignore  404.html  index.html  objects.inv  pyproject.toml  sitemap.xml
api/api-reference/: index.html
examples/: s3_full_example.py
examples/example_utils/: synth_data.py
search/: search_index.json
src/pdldb/: base_table_manager.py  base_table_validator.py  lake_manager.py  local_table_manager.py  s3_table_manager.py
tests/: base_table_validator_test.py  lake_manager_test.py  s3_lake_manager_test.py
